feat: header e seção sobre

--- a/index.html
+++ b/index.html
@@ -19,6 +19,82 @@
 </head>
 
 <body>
+    <header>
+        <img src="./assets/imgs/logos/logo.png" class="logo" alt="logo">
+        <menu>
+            <ul>
+                <a href="#">
+                    <li>Início</li>
+                </a>
+                <a href="#">
+                    <li>Quem somos</li>
+                </a>
+                <a href="#">
+                    <li>Serviços</li>
+                </a>
+                <a href="#">
+                    <li>Pagamento</li>
+                </a>
+                <a href="#">
+                    <li>Nossos clientes</li>
+                </a>
+                <a href="#">
+                    <li>Dúvidas</li>
+                </a>
+                <a href="#">
+                    <li>Contato</li>
+                </a>
+                <a href="#">
+                    <li>Localização</li>
+                </a>
+
+            </ul>
+        </menu>
+    </header>
+
+    <section id="sobre">
+        <img src="./assets/imgs/Local/local01.png" alt="Imagem do local" class="sobre_background">
+        <div class="descricao">
+            <h1>Bem-vindo ao Despachante Lopes!</h1>
+
+            <p>
+                Estamos localizados em Marília - SP, com uma equipe experiente e pronta para atender.
+            </p>
+            <p>
+                Trabalhamos com eficiência e transparência, cuidando de cada etapa do processo para que você não precise
+                se preocupar com burocracias. Desde transferência e licenciamento de veículos até renovação de CNH e
+                emissão de documentos.
+            </p>
+            <p>
+                Venha nos conhecer e descobrir como podemos facilitar o seu dia a dia. Nossa equipe está à disposição
+                para esclarecer dúvidas, oferecer orientações e garantir um atendimento personalizado e de qualidade.
+            </p>
+            <p class="center">Entre em contato ou visite nosso escritório.
+                <br>
+                Será um prazer atender você!</p>
+
+                <a href="#contato">
+                    <button type="button" class="contact">
+                        <span>ENTRE EM CONTATO</span>
+                    </button>
+                </a>
+        </div>
+    </section>
+
+    <div class="faixa">
+        <div class="elemento">
+            <i class="fa-solid fa-trophy"></i>
+            <span>Eleito como o melhor despachante da região em 2024.</span>
+        </div>
+        <div class="elemento">
+            <i class="fa-solid fa-bell-concierge"></i>
+            <span>Atendendo com excelência desde XXXX</span>
+        </div>
+        <div class="elemento">
+            <i class="fa-solid fa-shield-halved"></i>
+            <span>Seu atendimento seguro e com qualidade</span>
+        </div>
+    </div>
 
 </body>
 
