feat: seção Servicos

--- a/index.html
+++ b/index.html
@@ -71,13 +71,14 @@
             </p>
             <p class="center">Entre em contato ou visite nosso escritório.
                 <br>
-                Será um prazer atender você!</p>
+                Será um prazer atender você!
+            </p>
 
-                <a href="#contato">
-                    <button type="button" class="contact">
-                        <span>ENTRE EM CONTATO</span>
-                    </button>
-                </a>
+            <a href="#contato">
+                <button type="button" class="contact">
+                    <span>ENTRE EM CONTATO</span>
+                </button>
+            </a>
         </div>
     </section>
 
@@ -96,6 +97,32 @@
         </div>
     </div>
 
+    <section id="servicos">
+        <div class="titulo">
+            <h6 class="black">Conheça nossos</h6>
+            <h1 class="blue">SERVIÇOS</h1>
+        </div>
+        <div class="frases">
+            <h1>Precisa de Agilidade nos documentos do seu veículo?<h1>
+                    <p>Não se preocupe!
+                        Nós podemos te ajudar.</p>
+        </div>
+        <div class="servicos">
+            <img src="./assets/imgs/imgs/servicos.png" alt="">
+
+            <ul>
+                <li><span>&#10132;</span> Emplacamento</li>
+                <li><span>&#10132;</span> Licenciamento</li>
+                <li><span>&#10132;</span> IPVA</li>
+                <li><span>&#10132;</span> Transferências</li>
+                <li><span>&#10132;</span> Multas e Débitos</li>
+                <li><span>&#10132;</span> Renovação de CNH</li>
+                <li><span>&#10132;</span> Emissão de Certidões e Documentos</li>
+                <li><span>&#10132;</span> Acompanhamento de Processos Administrativos</li>
+                <li><span>&#10132;</span> Todos os serviços de trânsito em geral</li>
+            </ul>
+        </div>
+    </section>
 </body>
 
 <script src="https://kit.fontawesome.com/5f56dfe06a.js" crossorigin="anonymous"></script>
