feat: seção Clientes

--- a/index.html
+++ b/index.html
@@ -33,16 +33,13 @@
                     <li>Serviços</li>
                 </a>
                 <a href="#">
-                    <li>Pagamento</li>
-                </a>
-                <a href="#">
                     <li>Nossos clientes</li>
                 </a>
                 <a href="#">
                     <li>Dúvidas</li>
                 </a>
                 <a href="#">
-                    <li>Contato</li>
+                    <li>Contato / Orçamento</li>
                 </a>
                 <a href="#">
                     <li>Localização</li>
@@ -121,6 +118,27 @@
                 <li><span>&#10132;</span> Acompanhamento de Processos Administrativos</li>
                 <li><span>&#10132;</span> Todos os serviços de trânsito em geral</li>
             </ul>
+        </div>
+    </section>
+
+    <section id="clientes">
+        <div class="titulo">
+            <h6 class="black">Nossos</h6>
+            <h1 class="blue">CLIENTES</h1>
+        </div>
+        <p>Trabalhamos sempre com o objetivo de dar o melhor atendimento a você.</p>
+
+        <div class="cards">
+            <!--Widget Elfsight / Plano Free - login email programacao-->
+            <script src="https://static.elfsight.com/platform/platform.js" async></script>
+            <div class="elfsight-app-64968e3d-daad-4ccc-9929-0eddd7f3a496" data-elfsight-app-lazy></div>
+
+            <a href="https://www.google.com/search?kgmid=/g/11nn36kww5&hl=pt-BR&q=Despachante+Lopes+-+Mar%C3%ADlia+SP&shndl=30&source=sh/x/loc/osrp/m5/1&kgs=13855a4bf199074c#lrd=0x94bfd781e20a2c57:0xbafbe09dca4fa10a,1,,,,"
+                target="_blank">
+                <button class="btn-mais">
+                    Ver mais avaliações
+                </button>
+            </a>
         </div>
     </section>
 </body>
