feat: seção Duvidas

--- a/index.html
+++ b/index.html
@@ -141,6 +141,76 @@
             </a>
         </div>
     </section>
+
+    <section id="duvidas">
+        <div class="bloco">
+            <h1>Dúvidas <br> Frequentes</h1>
+            <img class="duv-img" src="./assets/imgs/imgs/faq-img.png" alt="" loading="lazy">
+        </div>
+        <div>
+            <div class="duvida">
+                <h3>Como saber se um despachante é confiável?</h3>
+                <!-- <img src="./assets/imgs/imgs/arrow-down.svg" alt=""> -->
+                <p class="paragrafo">
+                    Para verificar a confiabilidade de um despachante, pode-se consultar se ele está credenciado pelo
+                    Sindicato dos Despachantes Documentalistas ou se está na lista de despachantes credenciados do
+                    DETRAN.
+                </p>
+            </div>
+            <div class="duvida">
+                <h3>Como é cobrado o serviço de despachante?</h3>
+                <!-- <img src="./assets/imgs/imgs/arrow-down.svg" alt=""> -->
+                <p class="paragrafo">
+                    Os serviços de despachante são cobrados por honorários, que são uma taxa pelo trabalho prestado. O
+                    valor não é padronizado e cada prestador pode cobrar o que achar necessário.
+                </p>
+            </div>
+            <div class="duvida">
+                <h3>Quais documentos são necessários para emplacar um veículo?</h3>
+                <!-- <img src="./assets/imgs/imgs/arrow-down.svg" alt=""> -->
+                <p class="paragrafo">
+                    Para emplacar um veículo, são necessários os seguintes documentos:
+                    <br>
+                    • Identidade, CPF e CNH do proprietário
+                    <br>
+                    •Comprovante de residência
+                    <br>
+                    • Nota fiscal do veículo
+                    <br>
+                    • Decalque do número do chassi
+                </p>
+            </div>
+            <div class="duvida">
+                <h3>Dúvida 4</h3>
+                <!-- <img src="./assets/imgs/imgs/arrow-down.svg" alt=""> -->
+                <p class="paragrafo">
+                    Resposta
+                </p>
+            </div>
+            <div class="duvida">
+                <h3>Dúvida 5</h3>
+                <!-- <img src="./assets/imgs/imgs/arrow-down.svg" alt=""> -->
+                <p class="paragrafo">
+                    Resposta
+                </p>
+            </div>
+            <div class="duvida">
+                <h3>Dúvida 6</h3>
+                <!-- <img src="./assets/imgs/imgs/arrow-down.svg" alt=""> -->
+                <p class="paragrafo">
+                    Resposta
+                </p>
+            </div>
+            <div class="duvida">
+                <h3>Dúvida 7</h3>
+                <!-- <img src="./assets/imgs/imgs/arrow-down.svg" alt=""> -->
+                <p class="paragrafo">
+                    Resposta
+                </p>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 <script src="https://kit.fontawesome.com/5f56dfe06a.js" crossorigin="anonymous"></script>
