seção Contato iniciada

--- a/index.html
+++ b/index.html
@@ -121,6 +121,8 @@
         </div>
     </section>
 
+    <hr>
+
     <section id="clientes">
         <div class="titulo">
             <h6 class="black">Nossos</h6>
@@ -209,6 +211,90 @@
                 </p>
             </div>
         </div>
+    </section>
+
+    <section id="contato">
+        <h1 class="contato-titulo titulo">Entre em Contato</h1>
+        <h2 class="subtitulo">Será um prazer atender você!</h2>
+        <div class="fone">
+                <i class="fa-solid fa-phone-volume fa-shake"></i>
+                <p>Telefone: (14) 3301 3464</p>
+        </div>
+
+        <div class="redes">
+            <a href="#" target="_blank">
+                <div class="redes-container">
+                    <i class="fa-brands fa-whatsapp wpp"></i>
+                    <span>WhatsApp 1</span>
+                    <p>Robério</p>
+                </div>
+            </a>
+            <a href="mailto:###colocaremail###?subject=Olá! Vim pelo site." target="_top">
+                <div class="redes-container">
+                    <i class="fa-brands fa-whatsapp wpp"></i>
+                    <span>WhatsApp 2</span>
+                    <p>Giseli</p>
+                </div>
+            </a>
+            <a href="#" target="_blank">
+                <div class="redes-container">
+                    <i class="fa-brands fa-instagram insta"></i>
+                    <span>Instagram</span>
+                    <p>@despachantelopesmarilia</p>
+                </div>
+            </a>
+            <a href="#" target="_blank">
+                <div class="redes-container">
+                    <i class="fa-brands fa-facebook face"></i>
+                    <span>Facebook</span>
+                    <p>despachantelopesmarilia</p>
+                </div>
+            </a>
+        </div>
+
+        <!-- <div class="redes">
+            <div class="contato">
+                <i class="fa-brands fa-whatsapp wpp"></i>
+                <p>WhatsApp 1</p>
+            </div>
+            <div class="contato">
+                <i class="fa-brands fa-whatsapp wpp"></i>
+                <p>WhatsApp 2</p>
+            </div>
+            <div class="contato">
+                <i class="fa-brands fa-instagram insta"></i>
+                <p>Instagram</p>
+            </div>
+            <div class="contato">
+                <i class="fa-brands fa-facebook-f face"></i>
+                <p>Facebook</p>
+            </div>
+        </div> -->
+
+        <form action="https://formspree.io/f/mnqrqjjl" method="POST">
+            <fieldset class="campo">
+                <div>
+                    <input type="text" name="nome" id="nome" required placeholder="Nome">
+
+                    <input type="text" name="email" id="email" required
+                        placeholder="Insira seu email, para entrarmos em contato com você.">
+
+                    <input type="text" name="renavam" id="renavam" required placeholder="Placa/Renavam">
+
+                    <input type="text" name="telefone" id="telefone" required placeholder="Telefone">
+
+                    <select required>
+                        <option value="" disabled selected>Escolha o tipo de serviço </option>
+                        <option>Transferência</option>
+                        <option>Licenciamento</option>
+                    </select>
+
+                </div>
+            </fieldset>
+
+            <button class="btn-enviar" type="submit">Enviar</button>
+        </form>
+
     </section>
 
 </body>
